--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-devtools": "^5.87.4",
     "axios": "^1.10.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
